--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,11 @@ services:
     build: ../../apps/boot
     volumes:
       - ../../apps/boot:/code
+    depends_on:
+      - db
     environment:
       - DEBUG=1
+      - DATABASE_URL=postgres://postgres@db/postgres
       - HOST=0.0.0.0
       - FLASK_APP=boot/__init__.py
     env_file:
