--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,20 @@ services:
       - FLASK_APP=weather
     env_file:
       - ./.env
+  appstore-api:
+    build: ../../apps/appstore-api
+    volumes:
+      - ../../apps/appstore-api:/code
+    depends_on:
+      - db
+    environment:
+      - HOST=0.0.0.0
+      - DEBUG=1
+      - OAUTHLIB_INSECURE_TRANSPORT=1
+      - DATABASE_URL=postgres://postgres@db/appstore
+      - FLASK_APP=appstore
+    env_file:
+      - ./.env
   haproxy:
     build: ../../dev/infra/haproxy-fe
     depends_on:
@@ -80,6 +94,7 @@ services:
       - notif-app-icons
       - lp
       - weather
+      - appstore-api
     ports:
       - "8086:80"
   db:
