--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   auth:
-    build: ../../apps/auth
+    build:
+      context: ../../apps/auth
+      dockerfile: Dockerfile.cloudrun
     volumes:
       - ../../apps/auth:/code
     depends_on:
@@ -14,6 +16,7 @@ services:
       - REDIS_URL=redis://redis/0
       - HOST=0.0.0.0
       - FLASK_APP=auth/__init__.py
+      - PORT=5000
     env_file:
       - ./.env
   boot:
@@ -66,6 +69,7 @@ services:
     volumes:
       - ../../apps/weather:/code
     environment:
+      - REBBLE_AUTH_URL_INT=http://boot:5000
       - HOST=0.0.0.0
       - DEBUG=1
       - FLASK_APP=weather
